# xray-16

./: CMakeLists.txt
res/gamedata/shaders/glr1/: add_point.ps  add_ppa.ps  add_spot.ps  clouds.ps  clouds.vs  common.h  common_iostructs.h  editor.vs  hud_font.ps  model_def_hq.vs  model_def_lplanes.vs  model_def_lq.vs  model_def_lqs.vs  particle.ps  particle.vs  particle_distort.ps  portal.vs  postprocess.ps  postprocess_cm_pre.ps  postprocess_d.ps  simple_color.ps  skin_main.h  sky2.ps  sky2.vs  stub_notransform_t.vs  yuv2rgb.ps
res/gamedata/shaders/glr1/iostructs/: p_postpr.h  p_sky.h  p_tl.h  v_particle.h  v_portal.h  v_sky.h
res/gamedata/shaders/glr1/shared/: common.h
src/Common/: PlatformLinux.inl
src/Layers/: CMakeLists.txt
src/Layers/xrRender/: Blender_Recorder.cpp  Blender_Recorder.h  Blender_Recorder_R2.cpp  Blender_Recorder_StandartBinding.cpp  ColorMapManager.cpp  D3DXRenderBase.cpp  D3DXRenderBase.h  DetailManager.h  DetailManager_Decompress.cpp  DetailManager_VS.cpp  DetailModel.cpp  FProgressive.cpp  FTreeVisual.cpp  FVF.h  FVisual.cpp  HOM.cpp  LightTrack.cpp  LightTrack.h  Light_DB.cpp  Light_DB.h  ParticleEffect.cpp  QueryHelper.h  R_Backend.h  R_Backend_DBG.cpp  R_Backend_Runtime.cpp  R_Backend_Runtime.h  ResourceManager.cpp  ResourceManager.h  SH_Atomic.cpp  SH_Atomic.h  SH_RT.h  SH_Texture.h  ShaderResourceTraits.h  dxEnvironmentRender.cpp  dxEnvironmentRender.h  dxStatGraphRender.cpp  light.cpp  r__dsgraph_build.cpp  r__dsgraph_render.cpp  r__dsgraph_types.h  (+12 more)
src/Layers/xrRender/Debug/: dxPixEventWrapper.h
src/Layers/xrRender/blenders/: BlenderDefault.cpp  Blender_Blur.cpp  Blender_LaEmB.cpp  Blender_Lm(EbB).cpp  Blender_Screen_GRAY.cpp  Blender_Shadow_World.cpp  Blender_Vertex.cpp  Blender_Vertex_aref.cpp  uber_deffer.cpp
src/Layers/xrRenderDX9/: BufferUtils.cpp  CommonTypes.h  dx9HW.h  dx9SH_RT.cpp
src/Layers/xrRenderGLR1/: glR_Backend_Runtime.h  glResourceManager_Resources.cpp  glState.cpp  glStateUtils.h  glTextureUtils.h  glr_constants_cache.h
src/Layers/xrRenderPC_GL/: stdafx.h
src/Layers/xrRenderPC_GLR1/: CMakeLists.txt  FStaticRender.cpp  FStaticRender.h  FStaticRender_Blenders.cpp  FStaticRender_RenderTarget.cpp  FStaticRender_RenderTarget.h  FStaticRender_Shaders.cpp  LightShadows.cpp  rgl_test_hw.cpp  stdafx.h  xrRender_GLR1.cpp
src/Layers/xrRenderPC_R1/: CMakeLists.txt  FStaticRender_Blenders.cpp  FStaticRender_RenderTarget.cpp  FStaticRender_Shaders.cpp  stdafx.h
src/Layers/xrRender_R2/: r2.cpp  r2_R_render.cpp
src/xrCore/: xr_ini.cpp
src/xrEngine/: Device_Initialize.cpp  EngineAPI.cpp  main.cpp
